# sparcd-exploration

./: .gitignore  AGENTS.md  README.md  architecture-pwa.md  architecture.md  codex-brief.md  jetstream2-inference-octavia-lb.md  multi-user-question.md  package.json  plan-p2p-no-s3.md  pnpm-lock.yaml  skills-lock.json  turbo.json
.agents/skills/jetstream2-inference-lb/: SKILL.md
.agents/skills/jetstream2-inference-lb/scripts/: status.ps1  test-inference.ps1  update-acl.ps1
.claude/skills/: browser-tools
.github/workflows/: pages.yml
apps/sparcd-explorer/: .dockerignore  .env.example  Dockerfile  README.md  package.json  pyproject.toml  start-sparcd-explorer.ps1
apps/sparcd-explorer/notebooks/: hello.py  hello_wasm.py  sparcd_preview.py
apps/sparcd-explorer/pages/: index.html
apps/sparcd-explorer/scripts/: build-pages.mjs
docs/: session-handoff.md
